--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.0",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
